@@ -1,5 +1,7 @@
 2007-09-21    <tino@firebird.03.softkill.net>
 
+	* proc.h (tino_daemonize_pidOb, tino_daemonizeOb): added
+
 	* Makefile.proto (CXXFLAGS): added
 	(CFLAGS): Typo corrected, it must be called DBG_CFLAGS and not
 	DBG_FLAGS!  (For compat both can be used.)
